adding new text

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <di>
+    <div>
         <p>Yolo</p>
         <p>there</p>
-    </di>
+    </div>
+    <div>
+        <p>Adding something new to the file and testing</p>
+    </div>
 </body>
 </html>
